2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.h: Added splint annotations.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/sgroupio.c: Free allocated structures on failure.
	* lib/sgroupio.c: Added splint annotations.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/Makefile.am, lib/get_pid.c, lib/getulong.c: Added get_pid()
	and getulong().

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/getlong.c: Do not check for NULL string but empty string.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/groupio.c: Updated splint annotations.
	* lib/groupio.c: Added assert to help splint.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Check assumptions on snprintf().
	* src/useradd.c: Replace peror by an strerror and avoid an
	intermediate buffer.
	* src/useradd.c: Save errno between the failure and the report by
	perror/strerror.
	* src/useradd.c: Prefer xmalloc to malloc.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* src/lastlog.c: Remove function calls from within assert().

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/obscure.c: Change some int to size_t.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/console.c: Use a less disturbing construct for splint.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/limits.c: Parse the limits, umask, nice, maxlogin, file
	limit with getlog() / getulong(). This also means, in case of
	non-PAM enabled systems, that the umask specified on the GECOS
	fields should start with a 0 if specified in octal. (it used to be
	force to octal). Do the appropriate cast and range checking.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/salt.c: In case gettimeofday() fails, get some entropy
	from the PID.
